# livelol

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE.md  PRIVACY.md  PROJECT.yaml  README.md  STATUS.md  TODO.md  bot.py  database.py  mise.toml  pyproject.toml  utils.py
.claude/: settings.json
.claude/agents/: adversarial-reviewer.md
.claude/hooks/: review_gate.sh
.github/workflows/: ci.yml
agent/: INDEX.md  ONBOARD_PROMPT.md  architecture.md  conventions.md  domain.md  overview.md
agent/decisions/: _index.md  decisions__template.md
cogs/: admin.py  background.py  leaderboard.py  management.py  track.py
daily-reports/: 2026-07-11.md
scripts/: errors_block.py  health.sh  heartbeat_check.py
tests/: test_bot.py  test_db_service.py  test_heartbeat.py  test_helpers.py  test_management_cooldown.py  test_riot_api.py  test_sink_client.py  test_sink_config.py  test_update_command.py
utils/: constants.py  db_service.py  exceptions.py  helpers.py  links.py  logger_config.py  riot_api.py  sentry_config.py  sink_client.py  sink_config.py  ui_components.py
