[project]
name = "leaguehelper"
version = "0.1.0"
description = "LiveLOL - a Discord bot that tracks League of Legends ranked progress in real time."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.6.4",
    "firebase-admin>=7.1.0",
    "google-auth>=2.41.1",
    "gspread>=6.2.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.1.1",
    "ratelimit>=2.2.1",
    "ruff>=0.14.10",
    "sentry-sdk>=2.48.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "ARG", "D"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103", 
    "D104", 
    "D107", 
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

